fix button alignment with icons

--- a/src/client/styles/_buttons.scss
+++ b/src/client/styles/_buttons.scss
@@ -20,6 +20,8 @@
     border-width: 1px;
     border-color: $colorBlue;
     border-style: solid;
+    display: inline-flex;
+    align-items: center;
     &:hover {
         transform: translateY(-1px);
         box-shadow: 0px 3px 5px (0,0,0,0.2);
